--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "css": "sass"
   },
   "scripts": {
+    "commit": "cz",
+    "bootstrap": "pnpm install",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -27,8 +29,13 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-
-    "generator": "plop --plopfile generator/run.js"
+    "generator": "plop --plopfile generator/run.js",
+    "clean:lib": "rimraf node_modules",
+    "lint:eslint": "eslint --cache --max-warnings 0  \"{src}/**/*.{ts,tsx}\" --fix",
+    "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
+    "lint:lint-staged": "lint-staged",
+    "reinstall": "rimraf pnpm-lock.yaml && rimraf package.lock.json && rimraf node_modules && pnpm bootstrap",
+    "prepare": "husky install"
   },
   "browserslist": [
     "last 3 versions",
@@ -37,8 +44,20 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.5.3",
+    "immer": "^9.0.15",
+    "mitt": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "use-immer": "^0.7.0",
+    "zustand": "^4.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.0",
+    "@babel/runtime": "^7.7.7",
+    "@commitlint/cli": "^17.0.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@tarojs/cli": "3.5.3",
     "@tarojs/helper": "3.5.3",
     "@tarojs/plugin-framework-react": "3.5.3",
     "@tarojs/plugin-platform-alipay": "3.5.3",
@@ -53,32 +72,53 @@
     "@tarojs/shared": "3.5.3",
     "@tarojs/taro": "3.5.3",
     "@tarojs/taro-h5": "3.5.3",
-    "immer": "^9.0.15",
-    "mitt": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "use-immer": "^0.7.0",
-    "zustand": "^4.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.5.3",
     "@tarojs/webpack5-runner": "3.5.3",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "babel-preset-taro": "3.5.3",
+    "commitizen": "^4.2.5",
+    "commitlint-config-cz": "^0.13.3",
+    "cz-customizable": "^6.9.1",
     "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-taro": "3.5.3",
+    "eslint-import-resolver-typescript": "^3.4.1",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
     "plop": "^3.1.1",
+    "prettier": "^2.7.1",
     "react-refresh": "^0.11.0",
+    "rimraf": "^3.0.2",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
     "webpack": "5.69.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-customizable"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "{!(package)*.json": [
+      "prettier --write--parser json"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.{scss,less,styl,html}": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   }
 }
