--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,11 @@
     "jsx": "react-jsx",
     "allowJs": true,
     "resolveJsonModule": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": ["./src", "./types"],
-  "compileOnSave": false
+  "include": ["./src",
+    "./typings"
+  ],
+  "compileOnSave": false,
+  "exclude": ["generator", "config"]
 }
