--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/runtime": "^7.7.7",
     "@commitlint/cli": "^17.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@tarojs": "link:@types/@tarojs",
     "@tarojs/cli": "3.5.3",
     "@tarojs/helper": "3.5.3",
     "@tarojs/plugin-framework-react": "3.5.3",
