--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,8 @@ indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+end_of_line = lf
+max_line_length = 80
 
 [*.md]
 trim_trailing_whitespace = false
