--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
-  "printWidth": 75,
+  "useTabs": false,
+  "printWidth": 80,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "jsxSingleQuote": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
