--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "lint:eslint": "eslint --cache --max-warnings 0  \"{src}/**/*.{ts,tsx}\" --fix",
     "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
     "lint:lint-staged": "lint-staged",
-    "reinstall": "rimraf pnpm-lock.yaml && rimraf package.lock.json && rimraf node_modules && pnpm bootstrap",
-    "prepare": "yarn husky install"
+    "reinstall": "rimraf yarn.lock && rimraf pnpm-lock.yaml && rimraf package.lock.json && rimraf node_modules && yarn bootstrap",
+    "prepare": "husky install"
   },
   "browserslist": [
     "last 3 versions",
@@ -44,41 +44,43 @@
   ],
   "author": "",
   "dependencies": {
-    "@tarojs/components": "3.5.5",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@tarojs/components": "3.5.10",
     "dayjs": "^1.11.5",
     "immer": "^9.0.15",
-    "mitt": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "7",
     "react-transition-group": "^4.4.5",
-    "use-immer": "^0.7.0",
-    "zustand": "^4.0.0"
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@babel/runtime": "^7.7.7",
     "@commitlint/cli": "^17.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/plugin-framework-react": "3.5.5",
-    "@tarojs/react": "3.5.5",
-    "@tarojs/router": "3.5.5",
-    "@tarojs/runtime": "3.5.5",
-    "@tarojs/taro": "3.5.5",
-    "@tarojs/webpack5-runner": "3.5.5",
+    "@tarojs/plugin-framework-react": "3.5.10",
+    "@tarojs/react": "3.5.10",
+    "@tarojs/router": "3.5.10",
+    "@tarojs/runtime": "3.5.10",
+    "@tarojs/taro": "3.5.10",
+    "@tarojs/webpack5-runner": "3.5.10",
     "@types/react": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.5.5",
+    "babel-preset-taro": "3.5.10",
     "commitizen": "^4.2.5",
     "commitlint-config-cz": "^0.13.3",
     "cz-customizable": "^6.9.1",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-taro": "3.5.5",
+    "eslint-config-taro": "3.5.10",
     "eslint-import-resolver-typescript": "^3.4.1",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.6.0",
