--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es2020",
     "module": "commonjs",
     "removeComments": false,
     "preserveConstEnums": true,
@@ -23,6 +23,6 @@
       "@/*": ["src/*"]
     }
   },
-  "exclude": ["dist"],
+  "exclude": ["node_modules", "dist"],
   "compileOnSave": false
 }
