--- a/package.json
+++ b/package.json
@@ -47,13 +47,13 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tarojs/components": "3.5.10",
     "dayjs": "^1.11.5",
-    "immer": "^9.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "7",
+    "react-redux": "^8.0.5",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -95,16 +95,13 @@
     "webpack": "5.69.0"
   },
   "config": {
-    "commitizen": {
-      "path": "cz-customizable"
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ],
-    "{!(package)*.json}": [
+    "{!(package)*.json,.!(browserslist)*rc}": [
       "prettier --write--parser json"
     ],
     "package.json": [
