--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "css": "sass"
   },
   "scripts": {
-    "commit": "cz",
+    "commit": "git cz",
     "bootstrap": "yarn install",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
@@ -45,7 +45,7 @@
   "author": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "@tarojs/components": "3.5.10",
+    "@tarojs/components": "3.6.0-canary.10",
     "dayjs": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,26 +58,25 @@
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@babel/runtime": "^7.7.7",
-    "@commitlint/cli": "^17.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/plugin-framework-react": "3.5.10",
-    "@tarojs/react": "3.5.10",
-    "@tarojs/router": "3.5.10",
-    "@tarojs/runtime": "3.5.10",
-    "@tarojs/taro": "3.5.10",
-    "@tarojs/webpack5-runner": "3.5.10",
+    "@tarojs/plugin-framework-react": "3.6.0-canary.10",
+    "@tarojs/react": "3.6.0-canary.10",
+    "@tarojs/router": "3.6.0-canary.10",
+    "@tarojs/runtime": "3.6.0-canary.10",
+    "@tarojs/taro": "3.6.0-canary.10",
+    "@tarojs/webpack5-runner": "3.6.0-canary.10",
     "@types/react": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.5.10",
+    "babel-preset-taro": "3.6.0-canary.10",
     "commitizen": "^4.2.6",
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.4.1",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-taro": "3.5.10",
+    "eslint-config-taro": "3.6.0-canary.10",
     "eslint-import-resolver-typescript": "^3.4.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
