:sparkles: feat: add popup loading components

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tarojs/components": "3.6.0-canary.10",
     "dayjs": "^1.11.5",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -65,6 +66,7 @@
     "@tarojs/runtime": "3.6.0-canary.10",
     "@tarojs/taro": "3.6.0-canary.10",
     "@tarojs/webpack5-runner": "3.6.0-canary.10",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/webpack-env": "^1.13.6",
