feat: init project

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "author": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "@tarojs/components": "3.6.0-canary.10",
+    "@tarojs/components": "3.6.1",
     "dayjs": "^1.11.5",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -60,25 +60,25 @@
     "@babel/core": "^7.8.0",
     "@babel/runtime": "^7.7.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/plugin-framework-react": "3.6.0-canary.10",
-    "@tarojs/react": "3.6.0-canary.10",
-    "@tarojs/router": "3.6.0-canary.10",
-    "@tarojs/runtime": "3.6.0-canary.10",
-    "@tarojs/taro": "3.6.0-canary.10",
-    "@tarojs/webpack5-runner": "3.6.0-canary.10",
+    "@tarojs/plugin-framework-react": "3.6.1",
+    "@tarojs/react": "3.6.1",
+    "@tarojs/router": "3.6.1",
+    "@tarojs/runtime": "3.6.1",
+    "@tarojs/taro": "3.6.1",
+    "@tarojs/webpack5-runner": "3.6.1",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.6.0-canary.10",
+    "babel-preset-taro": "3.6.1",
     "commitizen": "^4.2.6",
     "cz-conventional-changelog": "^3.3.0",
     "cz-git": "^1.4.1",
     "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-taro": "3.6.0-canary.10",
+    "eslint-config-taro": "3.6.1",
     "eslint-import-resolver-typescript": "^3.4.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
