--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -2,12 +2,21 @@
   "name": "@linkio/hooks",
   "version": "1.0.0",
   "type": "module",
-  "description": "linkio design taro hooks",
-  "main": "index.ts",
+  "description": "linkio design hooks",
+  "main": "./dist/index.cjs",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "dev": "pnpm run stub",
+    "stub": "unbuild",
     "clean": "pnpm rimraf node_modules && pnpm rimraf dist"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "unbuild": "^1.1.2"
+  }
 }
