--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,17 @@
     "jsx": "react-jsx",
     "allowJs": true,
     "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "skipLibCheck": true,
+    "declaration": false,
+    "importHelpers": true,
     "typeRoots": ["node_modules/@types", "typings", "src/typings"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@linkio/hooks": ["./packages/hooks/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "lib", "es", "dist"],
   "compileOnSave": false
 }
