--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
   ],
   "author": "",
   "dependencies": {
+    "@linkio/constants": "workspace:*",
     "@linkio/core": "workspace:*",
     "@linkio/hooks": "workspace:*",
-    "@linkio/constants": "workspace:*",
     "@linkio/styles": "workspace:*",
     "@linkio/utils": "workspace:*",
     "@reduxjs/toolkit": "^1.9.1",
     "@tarojs/components": "3.6.1",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
@@ -66,6 +67,7 @@
     "@babel/runtime": "^7.7.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/plugin-framework-react": "3.6.1",
+    "@tarojs/plugin-platform-h5": "^3.6.1",
     "@tarojs/react": "3.6.1",
     "@tarojs/router": "3.6.1",
     "@tarojs/runtime": "3.6.1",
