--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -3,12 +3,36 @@
   "version": "1.0.0",
   "type": "module",
   "description": "linkio design hooks",
-  "main": "./src/index.ts",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "rollup --config",
     "clean": "pnpm rimraf node_modules && pnpm rimraf dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-external-helpers": "^7.18.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-react-display-name": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.0",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@types/node": "^18.14.0",
+    "rollup": "^3.17.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "tslib": "^2.5.0"
+  }
 }
