--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.base",
   "compilerOptions": {
     "rootDir": "src",
-    "composite": true
-  }
+    "outDir": "dist"
+  },
+  "include": ["src"]
 }
